# pastel-market

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml
crates/alphavantage/: Cargo.toml
crates/alphavantage/src/: lib.rs
crates/finviz-scraper/: Cargo.toml
crates/finviz-scraper/src/: detail.rs  lib.rs  screener.rs  sector.rs
crates/market-core/: Cargo.toml
crates/market-core/src/: analysis.rs  config.rs  decisions.rs  domain.rs  http.rs  indicators.rs  lib.rs  logging.rs  news.rs  report.rs  risk.rs  sec.rs  theme.rs
crates/whispers/: Cargo.toml
crates/whispers/src/: lib.rs
crates/yahoo-provider/: Cargo.toml
crates/yahoo-provider/src/: client.rs  lib.rs  news.rs  quotes.rs
data/: cik_map.ron  mock.json
docs/rationale/: 0001_unified_tui_workspace.md  0002_yahoo_finance_integration.md  0003_dynamic_watchlist_seeding.md  0004_sector_column_accent_titles.md  0005_live_data_wiring.md  0006_background_threaded_fetching.md  0007_performance_chart_overlay.md  0008_google_news_limitations.md  0009_embedded_cik_map.md
scripts/: version.sh
src/: app.rs  event.rs  main.rs  worker.rs
src/ui/: chart.rs  detail.rs  footer.rs  header.rs  help.rs  helpers.rs  journal.rs  mod.rs  qc.rs  risk.rs  scanner.rs  watchlist.rs
tests/: fixture_parsing.rs
tests/fixtures/: finviz_detail_aapl.html  finviz_etf_xlk.html  finviz_screener_changed_headers.html  finviz_screener_empty.html  finviz_screener_page1.html  yahoo_news_aapl.html
