[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
# Internal crates
market-core = { path = "crates/market-core" }
finviz-scraper = { path = "crates/finviz-scraper" }
yahoo-provider = { path = "crates/yahoo-provider" }
whispers = { path = "crates/whispers", default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "1.1.2", features = ["preserve_order"] }

# TUI
crossterm = "0.29.0"
ratatui = "0.30.0"

# HTTP & scraping
ureq = { version = "3.3.0", features = ["json", "cookies"] }
scraper = "0.26.0"

# Error handling
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Misc
chrono = "0.4.44"
directories = "6.0.0"

headless_chrome = "1.0.21"

[package]
name = "pastel-market"
version = "0.3.2"
edition.workspace = true
rust-version.workspace = true

[dependencies]
market-core.workspace = true
finviz-scraper.workspace = true
yahoo-provider.workspace = true
whispers.workspace = true
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true

[lints]
workspace = true
