[package]
name = "alphavantage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
market-core = { path = "../market-core" }
yahoo-provider = { path = "../yahoo-provider" }
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true

[lints]
workspace = true
