[package]
name = "market-core"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
quick-xml.workspace = true
ratatui.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true

[lints]
workspace = true
