[package]
name = "whispers"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["chrome"]
chrome = ["dep:headless_chrome"]

[dependencies]
market-core.workspace = true
anyhow.workspace = true
headless_chrome = { workspace = true, optional = true }
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
