[package]
name = "yahoo-provider"
version = "0.3.2"
edition.workspace = true
rust-version.workspace = true

[dependencies]
market-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ureq.workspace = true

[lints]
workspace = true
